--- a/repository/org/kuali/index.html
+++ b/repository/org/kuali/index.html
@@ -1,4 +1,4 @@
--e <html>
+<html>
 <body>
 <h1>Directory listing</h1>
 <hr/>
@@ -6,6 +6,6 @@
 <a href="../">../</a>
 <a href="kfs/">kfs/</a>
 <a href="pom/">pom/</a>
--e </pre>
+</pre>
 </body>
 </html>
