--- a/repository/org/kuali/kfs/index.html
+++ b/repository/org/kuali/kfs/index.html
@@ -1,10 +1,10 @@
--e <html>
+<html>
 <body>
 <h1>Directory listing</h1>
 <hr/>
 <pre>
 <a href="../">../</a>
 <a href="kfs-parent/">kfs-parent/</a>
--e </pre>
+</pre>
 </body>
 </html>
