--- a/repository/org/kuali/pom/kfs-common/0.0.1/index.html
+++ b/repository/org/kuali/pom/kfs-common/0.0.1/index.html
@@ -1,4 +1,4 @@
--e <html>
+<html>
 <body>
 <h1>Directory listing</h1>
 <hr/>
@@ -7,6 +7,6 @@
 <a href="kfs-common-0.0.1.pom">kfs-common-0.0.1.pom</a>
 <a href="kfs-common-0.0.1.pom.md5">kfs-common-0.0.1.pom.md5</a>
 <a href="kfs-common-0.0.1.pom.sha1">kfs-common-0.0.1.pom.sha1</a>
--e </pre>
+</pre>
 </body>
 </html>
