Releasing kfs-public

--- a/repository/org/kuali/kfs/index.html
+++ b/repository/org/kuali/kfs/index.html
@@ -4,7 +4,14 @@
 <hr/>
 <pre>
 <a href="../">../</a>
+<a href="kfs-config/">kfs-config/</a>
+<a href="kfs-core/">kfs-core/</a>
+<a href="kfs-module/">kfs-module/</a>
 <a href="kfs-parent/">kfs-parent/</a>
+<a href="kfs-rice/">kfs-rice/</a>
+<a href="maven-metadata.xml">maven-metadata.xml</a>
+<a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a>
+<a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a>
 </pre>
 </body>
 </html>
