--- a/repository/org/kuali/pom/index.html
+++ b/repository/org/kuali/pom/index.html
@@ -5,6 +5,7 @@
 <pre>
 <a href="../">../</a>
 <a href="kfs-common/">kfs-common/</a>
+<a href="kfs-public/">kfs-public/</a>
 </pre>
 </body>
 </html>
