Adding rice-ldap jar since it's not in any maven repo

--- a/repository/org/kuali/rice/index.html
+++ b/repository/org/kuali/rice/index.html
@@ -4,9 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="kfs/">kfs/</a>
-<a href="pom/">pom/</a>
-<a href="rice/">rice/</a>
+<a href="rice-ldap/">rice-ldap/</a>
 </pre>
 </body>
 </html>
