--- a/repository/org/kuali/rice/rice-ldap/index.html
+++ b/repository/org/kuali/rice/rice-ldap/index.html
@@ -4,9 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="kfs/">kfs/</a>
-<a href="pom/">pom/</a>
-<a href="rice/">rice/</a>
+<a href="1.0.3/">1.0.3/</a>
 </pre>
 </body>
 </html>
